--- a/app/assets/stylesheets/index_categories.scss
+++ b/app/assets/stylesheets/index_categories.scss
@@ -23,19 +23,12 @@ $categories-color: #6eb5f5;
 
 /* Removing navbar search defaults*/
 
+body.root.index .container{
+    width: 1400px; 
+}
 
 body.root.index .navbar-form{
   background-color: #81BFFA;
-
-}
-body.root.index .search-input{
-  background-color: inherit;
-  border: 0px;
-  box-shadow: none;
-  font-family: 'BebasNeue-Bold';
-  text-align: right;
-  font-size: 20px;
-  /* should box shadow also be removed? */
 }
 
 body.root.index {
@@ -53,26 +46,17 @@ body.root.index .navbar-default {
     }
 }
 
-body.root.index .about-element{
-  font-family: 'BebasNeue-Bold';
-  font-size: 20px;
-}
-
-body.root.index  .about-element a {
-  color: #323C71;
-}
 
 body.root.index main .container{
-  width: 100%; 
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: calc(100vh - 130px);
+  min-height: calc(100vh - 150px);
   padding: 0;
 }
 
 body.root.index .index_categories {
-  width: 1500px;
+  width: 100%;
 }
 
 /*  category blocks */
@@ -87,7 +71,6 @@ body.root.index .index_categories ul {
 }
 
 body.root.index .index_categories li{
-  margin: 15px;
   margin-top: 5px;
   margin-bottom: 25px;
   color: $categories-color;
@@ -102,7 +85,13 @@ body.root.index .index_categories li{
   .white-element {
     fill: $categories-color;
   }
+
+  &:nth-child(3n - 1) {
+    margin-left: 35px;
+    margin-right: 35px;
+  }
 }
+
 
 body.root.index .index_categories li a {
   width: 100%;
@@ -120,13 +109,15 @@ body.root.index .index_categories li a {
 body.root.index .logo-wrapper{
   padding-top: 40px;
   position: relative;
+
   &:hover {
+    
     .logo_image, .logo-text {
         opacity: 0;
       }
 
     .logo_image {
-      transform: rotate(360deg);
+      transform: rotate(360deg) scale(0.5);
     }
       
     .logo-back-text {
@@ -166,6 +157,7 @@ body.root.index .logo_image {
 
 body.root.index .logo-wrapper .logo-back-text {
   position: absolute;
+  left: 0;
   text-align: center;
   width: 100%;
   color: #2D1E49;
@@ -207,6 +199,7 @@ body.root.index .index_text {
   letter-spacing: 10px;
   color:#2d1e49;
   margin: 10px 0 40px 0;
+  text-align: center;
 }
 
 
@@ -263,48 +256,113 @@ body.root.index form-control > *{
   color: reds !important;
 }
 
-@media (max-width: 1600px){
+@media (max-width: 1450px) {
 
-  body.root.index .index_categories {
-    width: 100%;
+  body.root.index .container{
+    width: 70vw;
   }
 
-}
-
-@media (max-width: 1000px) {
   body.root.index .index_categories li{
-    width: 45vw;
-  }
-}
+    width: 33vw;
+    &:nth-child(2n) {
+      margin-left: 2vw;
+      margin-right: 0;
+    }
 
-@media(max-width: 870px) {
-  body.root.index .index_categories li{
-    width: 500px;
-  }
-}
-
-
-
-@media(max-width: 550px) {
-  body.root.index .index_categories li{
-    width: 90vw;
-    height: 300px;
-    margin-left: 0;
-    margin-right: 0;
-    .index_text {
-      margin-bottom: 20px;
+    &:nth-child(2n - 1) {
+      margin-right: 2vw;
+      margin-left: 0;
     }
   }
 
+}
 
+
+@media(max-width: 1100px) {
+
+  body.root.index .index_categories li{
+    height: 300px;
+
+    .category_image_animation svg {
+      height: auto;
+      width: 200px;
+    }
+  }
+
+  body.root.index .index_text {
+    font-size: 2.3em;
+  }
+}
+
+
+@media(max-width: 950px) {
+
+
+  body.root.index .index_categories li{
+    height: 280px;
+
+    .category_image_animation svg {
+      height: auto;
+      width: 160px;
+    }
+  }
+
+  body.root.index .index_text {
+    font-size: 2.1em;
+  }
+}
+
+
+@media(max-width: 810px) {
+  body.root.index .container {
+    width: 100%;
+  }
+
+  body.root.index .index_categories li{
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    width: 410px;
+
+    &.logo-wrapper{
+      padding-top: 0;
+    }
+
+    &.category-item {
+      justify-content: center;
+      height: auto;
+      padding: 20px 0;
+    }
+
+
+    .index_text {
+      margin-bottom: 20px;
+    }
+
+    .category_image_animation svg {
+      height: auto;
+      width: 260px;
+    }
+  }
 
   body.root.index .logo-wrapper .logo-back-text {
-    font-size: 1.5em;
+      font-size: 1.5em;
   } 
 }
 
-@media(max-width: 430px) {
-  body.root.index .index_text {
-    font-size: 2.3em;
+@media(max-width: 450px) {
+
+  body.root.index .index_categories li{
+    height: 280px;
+    width: 80vw;
+
+
+    .category_image_animation svg {
+      height: auto;
+      width: 200px;
+    }
+
+    .index_text {
+      font-size: 1.4em;
+    }
   }
 }
