--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -44,12 +44,10 @@
     if user_signed_in?
       js << 'admin_scripts'
     end
-    if params[:controller] == 'root' && params[:action] == 'index'
-      js << 'snap.svg.min'
-      js << 'snap.svg.easing.min'
-      js << 'animate'
-    end
+    js << 'snap.svg.min'
+    js << 'snap.svg.easing.min'
+    js << 'animate'
   %>
   <%= javascript_include_tag *(js) %>
-  <script src = "http://www.youtube.com/player_api"></script>
+  <script src = "https://www.youtube.com/player_api"></script>
 </head>
