--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -93,23 +93,30 @@ body.root.experiments .exp-categories li{
   .white-element {
     fill: white;
   }
+
+  a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+  }
 }
 
-body.root.experiments .exp-categories .categoty_image svg {
+body.root.experiments .exp-categories .category_image svg {
   width: 110px;
   height: 98px;
 }
 
 body.root.experiments .exp-categories .index_text {
   z-index: 100;
-  position: absolute;
-  top: 75px;
   font-size: 24px;
   color: $text-color;
-  left: 50%;
-  transform: translateX(-50%);
   font-family: BebasNeue-Bold;
-  a{
+  letter-spacing: 4px;
+
+  a {
     color: $text-color; 
   }
 }
@@ -355,7 +362,7 @@ body.root.experiments .exp-list .exp-description {
 }
 
 
-@media screen and (max-width: 975px) {
+@media screen and (max-width: 1100px) {
 
 
     body.root.experiments .exp-categories ul{
@@ -367,17 +374,15 @@ body.root.experiments .exp-list .exp-description {
     }
   
     body.root.experiments .exp-categories li:not(.logo) { 
-      height: 60px;
+      height: auto;
       display: flex;
       align-items: center;
       width: auto;
-      margin: 0 20px 0 20px;
+      margin: 20px;
     }
 
     body.root.experiments .categories-list {
-
       .index_text {
-
         position: relative;
         top: 0;
         left: 0;
@@ -386,23 +391,23 @@ body.root.experiments .exp-list .exp-description {
         transform: none;
         line-height: 24px;
         padding: 0 10px 0 10px;
-        br {
-          display: none;
-        }
-
       }
 
-      .categoty_image {
+      .category_image {
         display: none;
       }
     }
 
-    body.root.experiments li.logo {
-    }
-  
     body.root.experiments .exp-list {
       margin-top: 0;
     }
+
+}
+
+
+@media screen and (max-width: 975px) {
+
+
 
     body.root.experiments .exp-list li{
 
