--- a/app/views/root/experiments.html.erb
+++ b/app/views/root/experiments.html.erb
@@ -21,10 +21,9 @@
                 'data-svg': asset_url(category_icon_path(category.slug)),
                 'data-json': asset_url(category_json_path(category.slug)) do %>
 
-          <div class="categoty_image" id="<%= "category_img_#{category.slug}" %>">
+          <div class="category_image" id="<%= "category_img_#{category.slug}" %>">
           </div>
           <div class="index_text">
-            <br />
             <%= category.title %>
           </div>
         <% end %>
