--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -6,8 +6,9 @@ $small_thumb_w: 430px;
 
 /* adjusting compnents for the categories page*/
 
-body.root.experiments a:hover {
+body.root.experiments a:hover, a:focus {
   text-decoration: none;
+  outline: none;
 }
 
 
@@ -251,9 +252,8 @@ body.root.experiments .exp-list li:hover {
 
   .exp-text {
     transition: box-shadow 0.3s ease-in-out;
-    box-shadow: 0px 0px 53px 3px rgba(0,0,0,0.35);
+    box-shadow: 0px 0px 53px 3px rgba(0,0,0,0.15);
    }
-  
 
 }
 
