--- a/app/assets/stylesheets/experiment.scss
+++ b/app/assets/stylesheets/experiment.scss
@@ -59,7 +59,7 @@ body.root.experiment .primary-header {
 	}
 
 	.experiment-selected-category{
-
+		font-size: 1.3em;
 		font-family: DejaVuSans;
 		color: #fff;
 
