--- a/app/views/admin/experiments/_form.html.erb
+++ b/app/views/admin/experiments/_form.html.erb
@@ -22,7 +22,7 @@
 
         <h3><%= t('activerecord.models.ingredient', count: 999) %></h3>
 
-        <table class="table table-striped table-hover table-nonfluid table-ingredients" data-type='ingredients'>
+        <table class="table table-striped table-hover table-nonfluid table-ingredients" data-type='ingredients' data-locale='<%= enabled_locale %>'>
           <thead>
             <tr>
               <th></th>
@@ -62,7 +62,7 @@
 
         <h3><%= t('activerecord.models.direction', count: 999) %></h3>
 
-        <table class="table table-striped table-hover table-nonfluid table-directions" data-type='directions'>
+        <table class="table table-striped table-hover table-nonfluid table-directions" data-type='directions' data-locale='<%= enabled_locale %>'>
           <thead>
             <tr>
               <th>
@@ -103,7 +103,7 @@
 
           <h3><%= t('activerecord.models.direction_image', count: 999) %></h3>
 
-          <table class="table table-striped table-hover table-nonfluid table-images" data-type='images'>
+          <table class="table table-striped table-hover table-nonfluid table-images" data-type='images' data-locale='<%= enabled_locale %>'>
             <thead>
               <tr>
                 <th style="width: 40%;">
